Product editing enabled.
