# swagger/swagger.json
@@ -413,6 +413,29 @@
                     }
                 ]
             },
+            "post": {
+                "tags": [
+                    "headquarters"
+                ],
+                "description": "Add product to headquarter.",
+                "operationId": "HeadquartersController.AddProduct",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "headquarter_id",
+                        "description": "Headquarter id.",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ]
+            },
             "delete": {
                 "tags": [
                     "headquarters"
@@ -435,13 +458,15 @@
                         "format": "int64"
                     }
                 ]
-            },
+            }
+        },
+        "/headquarters/{headquarter_id}/products/{headquarter_product_id}": {
             "patch": {
                 "tags": [
                     "headquarters"
                 ],
-                "description": "Add products to headquarter.",
-                "operationId": "HeadquartersController.AddProducts",
+                "description": "Update headquarter product.",
+                "operationId": "HeadquartersController.UpdateProduct",
                 "consumes": [
                     "application/json"
                 ],
@@ -453,6 +478,14 @@
                         "in": "path",
                         "name": "headquarter_id",
                         "description": "Headquarter id.",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "path",
+                        "name": "headquarter_product_id",
+                        "description": "Headquarter product id.",
                         "required": true,
                         "type": "integer",
                         "format": "int64"
@@ -544,6 +577,21 @@
                         "description": ":product_id is empty"
                     }
                 }
+            }
+        },
+        "/products/brands": {
+            "get": {
+                "tags": [
+                    "products"
+                ],
+                "description": "Get product brands.",
+                "operationId": "ProductsController.GetBrands",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ]
             }
         },
         "/products/{catering_id}": {
@@ -843,28 +891,28 @@
             "title": "Product",
             "type": "object",
             "properties": {
-                "Brand": {
+                "brand": {
                     "type": "string"
                 },
-                "Color": {
+                "color": {
                     "type": "string"
                 },
-                "Created": {
+                "created": {
                     "type": "string",
                     "format": "string"
                 },
-                "Id": {
+                "id": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "Name": {
+                "name": {
                     "type": "string"
                 },
-                "Price": {
+                "price": {
                     "type": "number",
                     "format": "double"
                 },
-                "Updated": {
+                "updated": {
                     "type": "string",
                     "format": "string"
                 }
